--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+  <!-- 此处插入了公用的header -->
+  <link rel="import" href="./widgets/header/header.html?__inline">
+  <!-- 此处插入了公用的header -->
+
   <a href="./pages/demo/demo.html">打开示例</a>
   <script src="./index.ts"></script>
 </body>
